# snake-ai

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
model/: model.h5  model.py
src/: config.py  fruit.py  snake.py  snake_game_human.py  snakegame.py  vector.py
src/MPK_API.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/Snake_RL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
