[metadata]
name = MPK API
description = API for MPK LODZ
author = Rostyslav Mosorov
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    flake8>=3.9
    tox>=3.24

[options.package_data]
kdtree = py.typed
stops = py.typed
timetable = py.typed

[mypy]
ignore_missing_imports = True